--- a/platformio.ini
+++ b/platformio.ini
@@ -56,7 +56,7 @@ platform = https://github.com/pioarduino/platform-espressif32/releases/download/
 ; board = esp32-c6-devkitc-1
 
 [env:arduino-310]
-platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.10-rc3/platform-espressif32.zip
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.10/platform-espressif32.zip
 ; board = esp32-s3-devkitc-1
 ; board = esp32-c6-devkitc-1
 
@@ -84,7 +84,7 @@ build_flags = ${env.build_flags}
   -D ESPCONNECT_ETH_SUPPORT
 
 [env:esp32-poe-arduino-310]
-platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.10-rc3/platform-espressif32.zip
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.10/platform-espressif32.zip
 board = esp32-poe
 build_flags = ${env.build_flags}
   -D ESPCONNECT_ETH_SUPPORT
@@ -108,7 +108,7 @@ build_flags = ${env.build_flags}
   -D ETH_PHY_POWER=16
 
 [env:wt32-eth01-arduino-310]
-platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.10-rc3/platform-espressif32.zip
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.10/platform-espressif32.zip
 board = wt32-eth01
 build_flags = ${env.build_flags}
   -D ESPCONNECT_ETH_SUPPORT
@@ -152,7 +152,7 @@ build_flags = ${env.build_flags}
   -UARDUINO_USB_CDC_ON_BOOT
 
 [env:lilygo-eth-lite-s3-arduino-310]
-platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.10-rc3/platform-espressif32.zip
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.10/platform-espressif32.zip
 upload_speed = 115200
 board = esp32s3box
 build_flags = ${env.build_flags}
