--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,15 +72,15 @@ jobs:
           - platform: https://github.com/pioarduino/platform-espressif32/releases/download/51.03.05/platform-espressif32.zip
             board: esp32-c6-devkitc-1
 
-          - platform: https://github.com/pioarduino/platform-espressif32/releases/download/53.03.10-rc3/platform-espressif32.zip
+          - platform: https://github.com/pioarduino/platform-espressif32/releases/download/53.03.10/platform-espressif32.zip
             board: esp32dev
-          - platform: https://github.com/pioarduino/platform-espressif32/releases/download/53.03.10-rc3/platform-espressif32.zip
+          - platform: https://github.com/pioarduino/platform-espressif32/releases/download/53.03.10/platform-espressif32.zip
             board: esp32-s2-saola-1
-          - platform: https://github.com/pioarduino/platform-espressif32/releases/download/53.03.10-rc3/platform-espressif32.zip
+          - platform: https://github.com/pioarduino/platform-espressif32/releases/download/53.03.10/platform-espressif32.zip
             board: esp32-s3-devkitc-1
-          - platform: https://github.com/pioarduino/platform-espressif32/releases/download/53.03.10-rc3/platform-espressif32.zip
+          - platform: https://github.com/pioarduino/platform-espressif32/releases/download/53.03.10/platform-espressif32.zip
             board: esp32-c3-devkitc-02
-          - platform: https://github.com/pioarduino/platform-espressif32/releases/download/53.03.10-rc3/platform-espressif32.zip
+          - platform: https://github.com/pioarduino/platform-espressif32/releases/download/53.03.10/platform-espressif32.zip
             board: esp32-c6-devkitc-1
 
     steps:
