Switched to ESP32Async

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,9 +21,11 @@ build_flags =
   ; -D ESPCONNECT_NO_MDNS
   ; -D DEBUG_ESP_CORE
   ; -D ESPCONNECT_NO_MDNS
+lib_compat_mode = strict
+lib_ldf_mode = chain
 lib_deps = 
   bblanchon/ArduinoJson @ 7.3.0
-  mathieucarbou/ESPAsyncWebServer @ 3.6.0
+  ESP32Async/ESPAsyncWebServer @ 3.6.0
 lib_compat_mode = strict
 lib_ldf_mode = chain
 upload_protocol = esptool
@@ -42,7 +44,7 @@ platform = ${sysenv.PIO_PLATFORM}
 board = ${sysenv.PIO_BOARD}
 lib_deps = 
   bblanchon/ArduinoJson @ 7.3.0
-  mathieucarbou/ESPAsyncWebServer @ 3.6.0
+  ESP32Async/ESPAsyncWebServer @ 3.6.0
   vshymanskyy/Preferences @ 2.1.0
 
 ;  DEV
@@ -66,7 +68,7 @@ board = huzzah
 ; board = d1_mini
 lib_deps = 
   bblanchon/ArduinoJson @ 7.3.0
-  mathieucarbou/ESPAsyncWebServer @ 3.6.0
+  ESP32Async/ESPAsyncWebServer @ 3.6.0
   vshymanskyy/Preferences @ 2.1.0
 
 ; ETH: esp32-poe
