--- a/platformio.ini
+++ b/platformio.ini
@@ -25,6 +25,7 @@ lib_compat_mode = strict
 lib_ldf_mode = chain
 lib_deps = 
   bblanchon/ArduinoJson @ 7.3.0
+  ESP32Async/AsyncTCP @ ^3.3.2
   ESP32Async/ESPAsyncWebServer @ 3.6.0
 upload_protocol = esptool
 monitor_speed = 115200
@@ -42,6 +43,7 @@ platform = ${sysenv.PIO_PLATFORM}
 board = ${sysenv.PIO_BOARD}
 lib_deps = 
   bblanchon/ArduinoJson @ 7.3.0
+  ESP32Async/ESPAsyncTCP @ ^2.0.0
   ESP32Async/ESPAsyncWebServer @ 3.6.0
   vshymanskyy/Preferences @ 2.1.0
 
@@ -66,6 +68,7 @@ board = huzzah
 ; board = d1_mini
 lib_deps = 
   bblanchon/ArduinoJson @ 7.3.0
+  ESP32Async/ESPAsyncTCP @ ^2.0.0
   ESP32Async/ESPAsyncWebServer @ 3.6.0
   vshymanskyy/Preferences @ 2.1.0
 
