--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 
 [platformio]
-default_envs = arduino-2, arduino-3, arduino-311, esp8266, esp32-poe-arduino-2, esp32-poe-arduino-3, esp32-poe-arduino-311, wt32-eth01-arduino-2, wt32-eth01-arduino-3, wt32-eth01-arduino-311, lilygo-eth-lite-s3-arduino-2, lilygo-eth-lite-s3-arduino-3, lilygo-eth-lite-s3-arduino-311
+default_envs = arduino-2, arduino-3, arduino-3-latest, esp8266, esp32-poe-arduino-2, esp32-poe-arduino-3, esp32-poe-arduino-3-latest, wt32-eth01-arduino-2, wt32-eth01-arduino-3, wt32-eth01-arduino-3-latest, lilygo-eth-lite-s3-arduino-2, lilygo-eth-lite-s3-arduino-3, lilygo-eth-lite-s3-arduino-3-latest
 lib_dir = .
 ; src_dir = examples/BlockingCaptivePortal
 src_dir = examples/NonBlockingCaptivePortal
@@ -53,12 +53,12 @@ lib_deps =
 platform = espressif32@6.10.0
 
 [env:arduino-3]
-platform = https://github.com/pioarduino/platform-espressif32/releases/download/51.03.05/platform-espressif32.zip
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.13/platform-espressif32.zip
 ; board = esp32-s3-devkitc-1
 ; board = esp32-c6-devkitc-1
 
-[env:arduino-311]
-platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.13/platform-espressif32.zip
+[env:arduino-3-latest]
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/54.03.20-rc1/platform-espressif32.zip
 ; board = esp32-s3-devkitc-1
 ; board = esp32-c6-devkitc-1
 
@@ -81,13 +81,13 @@ build_flags = ${env.build_flags}
   -D ESPCONNECT_ETH_SUPPORT
 
 [env:esp32-poe-arduino-3]
-platform = https://github.com/pioarduino/platform-espressif32/releases/download/51.03.05/platform-espressif32.zip
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.13/platform-espressif32.zip
 board = esp32-poe
 build_flags = ${env.build_flags}
   -D ESPCONNECT_ETH_SUPPORT
 
-[env:esp32-poe-arduino-311]
-platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.13/platform-espressif32.zip
+[env:esp32-poe-arduino-3-latest]
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/54.03.20-rc1/platform-espressif32.zip
 board = esp32-poe
 build_flags = ${env.build_flags}
   -D ESPCONNECT_ETH_SUPPORT
@@ -103,15 +103,15 @@ build_flags = ${env.build_flags}
   -D ETH_PHY_POWER=16
 
 [env:wt32-eth01-arduino-3]
-platform = https://github.com/pioarduino/platform-espressif32/releases/download/51.03.05/platform-espressif32.zip
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.13/platform-espressif32.zip
 board = wt32-eth01
 build_flags = ${env.build_flags}
   -D ESPCONNECT_ETH_SUPPORT
   -D ETH_PHY_ADDR=1
   -D ETH_PHY_POWER=16
 
-[env:wt32-eth01-arduino-311]
-platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.13/platform-espressif32.zip
+[env:wt32-eth01-arduino-3-latest]
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/54.03.20-rc1/platform-espressif32.zip
 board = wt32-eth01
 build_flags = ${env.build_flags}
   -D ESPCONNECT_ETH_SUPPORT
@@ -139,7 +139,7 @@ build_flags = ${env.build_flags}
 
 [env:lilygo-eth-lite-s3-arduino-3]
 upload_speed = 115200
-platform = https://github.com/pioarduino/platform-espressif32/releases/download/51.03.05/platform-espressif32.zip
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.13/platform-espressif32.zip
 board = esp32s3box
 build_flags = ${env.build_flags}
   -D ESPCONNECT_ETH_SUPPORT
@@ -154,8 +154,8 @@ build_flags = ${env.build_flags}
   -D ETH_PHY_TYPE=ETH_PHY_W5500
   -UARDUINO_USB_CDC_ON_BOOT
 
-[env:lilygo-eth-lite-s3-arduino-311]
-platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.13/platform-espressif32.zip
+[env:lilygo-eth-lite-s3-arduino-3-latest]
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/54.03.20-rc1/platform-espressif32.zip
 upload_speed = 115200
 board = esp32s3box
 build_flags = ${env.build_flags}
