--- a/platformio.ini
+++ b/platformio.ini
@@ -3,10 +3,11 @@
 default_envs = arduino-2, arduino-3, arduino-3-latest, esp8266, esp32-poe-arduino-2, esp32-poe-arduino-3, esp32-poe-arduino-3-latest, wt32-eth01-arduino-2, wt32-eth01-arduino-3, wt32-eth01-arduino-3-latest, lilygo-eth-lite-s3-arduino-2, lilygo-eth-lite-s3-arduino-3, lilygo-eth-lite-s3-arduino-3-latest
 lib_dir = .
 ; src_dir = examples/BlockingCaptivePortal
-src_dir = examples/NonBlockingCaptivePortal
+; src_dir = examples/NonBlockingCaptivePortal
 ; src_dir = examples/AdvancedCaptivePortal
 ; src_dir = examples/TestWiFi8266
 ; src_dir = examples/WiFiStaticIP
+src_dir = examples/LoadSaveConfig
 
 [env]
 framework = arduino
