--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,6 +117,8 @@ jobs:
       - run: PLATFORMIO_BUILD_FLAGS="-DESPCONNECT_NO_MDNS" PLATFORMIO_SRC_DIR=examples/WiFiStaticIP PIO_BOARD=${{ matrix.board }} PIO_PLATFORM=${{ matrix.platform }} pio run -e ci
       - run: PLATFORMIO_BUILD_FLAGS="-DESPCONNECT_NO_MDNS" PLATFORMIO_SRC_DIR=examples/LoadSaveConfig PIO_BOARD=${{ matrix.board }} PIO_PLATFORM=${{ matrix.platform }} pio run -e ci
 
+      - run: PLATFORMIO_BUILD_FLAGS="-ESPCONNECT_NO_STD_STRING" PLATFORMIO_SRC_DIR=examples/AdvancedCaptivePortal PIO_BOARD=${{ matrix.board }} PIO_PLATFORM=${{ matrix.platform }} pio run -e ci
+
       - run: PLATFORMIO_BUILD_FLAGS="-ESPCONNECT_NO_CAPTIVE_PORTAL" PLATFORMIO_SRC_DIR=examples/NoCaptivePortal PIO_BOARD=${{ matrix.board }} PIO_PLATFORM=${{ matrix.platform }} pio run -e ci
 
   platformio-ci-esp8266:
@@ -164,6 +166,8 @@ jobs:
       - run: PLATFORMIO_BUILD_FLAGS="-DESPCONNECT_NO_MDNS" PLATFORMIO_SRC_DIR=examples/WiFiStaticIP PIO_BOARD=${{ matrix.board }} PIO_PLATFORM=${{ matrix.platform }} pio run -e ci-esp8266
       - run: PLATFORMIO_BUILD_FLAGS="-DESPCONNECT_NO_MDNS" PLATFORMIO_SRC_DIR=examples/LoadSaveConfig PIO_BOARD=${{ matrix.board }} PIO_PLATFORM=${{ matrix.platform }} pio run -e ci-esp8266
 
+      - run: PLATFORMIO_BUILD_FLAGS="-ESPCONNECT_NO_STD_STRING" PLATFORMIO_SRC_DIR=examples/AdvancedCaptivePortal PIO_BOARD=${{ matrix.board }} PIO_PLATFORM=${{ matrix.platform }} pio run -e ci-esp8266
+
       - run: PLATFORMIO_BUILD_FLAGS="-ESPCONNECT_NO_CAPTIVE_PORTAL" PLATFORMIO_SRC_DIR=examples/NoCaptivePortal PIO_BOARD=${{ matrix.board }} PIO_PLATFORM=${{ matrix.platform }} pio run -e ci-esp8266
       
   platformio-eth:
@@ -208,5 +212,7 @@ jobs:
       - run: PLATFORMIO_BUILD_FLAGS="-DESPCONNECT_NO_MDNS" PLATFORMIO_SRC_DIR=examples/AdvancedCaptivePortal pio run -e ${{ matrix.board }}-${{ matrix.platform }}
       - run: PLATFORMIO_BUILD_FLAGS="-DESPCONNECT_NO_MDNS" PLATFORMIO_SRC_DIR=examples/WiFiStaticIP pio run -e ${{ matrix.board }}-${{ matrix.platform }}
       - run: PLATFORMIO_BUILD_FLAGS="-DESPCONNECT_NO_MDNS" PLATFORMIO_SRC_DIR=examples/LoadSaveConfig pio run -e ${{ matrix.board }}-${{ matrix.platform }}
+
+      - run: PLATFORMIO_BUILD_FLAGS="-ESPCONNECT_NO_STD_STRING" PLATFORMIO_SRC_DIR=examples/AdvancedCaptivePortal pio run -e ${{ matrix.board }}-${{ matrix.platform }}
 
       - run: PLATFORMIO_BUILD_FLAGS="-ESPCONNECT_NO_CAPTIVE_PORTAL" PLATFORMIO_SRC_DIR=examples/NoCaptivePortal pio run -e ${{ matrix.board }}-${{ matrix.platform }}
