--- a/platformio.ini
+++ b/platformio.ini
@@ -7,8 +7,8 @@ lib_dir = .
 ; src_dir = examples/AdvancedCaptivePortal
 ; src_dir = examples/TestWiFi8266
 ; src_dir = examples/WiFiStaticIP
-; src_dir = examples/LoadSaveConfig
-src_dir = examples/NoCaptivePortal
+src_dir = examples/LoadSaveConfig
+; src_dir = examples/NoCaptivePortal
 
 [env]
 framework = arduino
@@ -24,6 +24,7 @@ build_flags =
   ; -D DEBUG_ESP_CORE
   ; -D ESPCONNECT_NO_MDNS
   ; -D ESPCONNECT_NO_CAPTIVE_PORTAL
+  ; -D ESPCONNECT_NO_STD_STRING
 lib_compat_mode = strict
 lib_ldf_mode = chain
 lib_deps = 
