--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 
 [platformio]
-default_envs = arduino-2, arduino-3, arduino-3-latest, esp8266, esp32-poe-arduino-2, esp32-poe-arduino-3, esp32-poe-arduino-3-latest, wt32-eth01-arduino-2, wt32-eth01-arduino-3, wt32-eth01-arduino-3-latest, lilygo-eth-lite-s3-arduino-2, lilygo-eth-lite-s3-arduino-3, lilygo-eth-lite-s3-arduino-3-latest
+default_envs = arduino-3, arduino-3-latest, esp8266, esp32-poe-arduino-3, esp32-poe-arduino-3-latest, wt32-eth01-arduino-3, wt32-eth01-arduino-3-latest, lilygo-eth-lite-s3-arduino-3, lilygo-eth-lite-s3-arduino-3-latest
 lib_dir = .
 ; src_dir = examples/BlockingCaptivePortal
 ; src_dir = examples/NonBlockingCaptivePortal
@@ -53,9 +53,6 @@ lib_deps =
 
 ;  DEV
 
-[env:arduino-2]
-platform = espressif32@6.10.0
-
 [env:arduino-3]
 platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.13/platform-espressif32.zip
 ; board = esp32-s3-devkitc-1
@@ -78,12 +75,6 @@ lib_deps =
 
 ; ETH: esp32-poe
 
-[env:esp32-poe-arduino-2]
-platform = espressif32@6.10.0
-board = esp32-poe
-build_flags = ${env.build_flags}
-  -D ESPCONNECT_ETH_SUPPORT
-
 [env:esp32-poe-arduino-3]
 platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.13/platform-espressif32.zip
 board = esp32-poe
@@ -97,15 +88,6 @@ build_flags = ${env.build_flags}
   -D ESPCONNECT_ETH_SUPPORT
 
 ; ETH: wt32-eth01
-
-[env:wt32-eth01-arduino-2]
-platform = espressif32@6.10.0
-board = wt32-eth01
-build_flags = ${env.build_flags}
-  -D ESPCONNECT_ETH_SUPPORT
-  -D ETH_PHY_ADDR=1
-  -D ETH_PHY_POWER=16
-
 [env:wt32-eth01-arduino-3]
 platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.13/platform-espressif32.zip
 board = wt32-eth01
@@ -123,23 +105,6 @@ build_flags = ${env.build_flags}
   -D ETH_PHY_POWER=16
 
 ; ETH: lilygo-eth-lite-s3
-
-[env:lilygo-eth-lite-s3-arduino-2]
-upload_speed = 115200
-platform = espressif32@6.10.0
-board = esp32s3box
-build_flags = ${env.build_flags}
-  -D ESPCONNECT_ETH_SUPPORT
-  -D ETH_PHY_ADDR=1
-  -D ETH_PHY_CS=9
-  -D ETH_PHY_IRQ=13
-  -D ETH_PHY_RST=14
-  -D ETH_PHY_SPI_MISO=11
-  -D ETH_PHY_SPI_MOSI=12
-  -D ETH_PHY_SPI_SCK=10
-  ; can only be activated with ESP-IDF >= 5
-  ; -D ETH_PHY_TYPE=ETH_PHY_W5500
-  -UARDUINO_USB_CDC_ON_BOOT
 
 [env:lilygo-eth-lite-s3-arduino-3]
 upload_speed = 115200
