--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,10 @@ build_flags =
   -Wall -Wextra
   -D CONFIG_ARDUHAL_LOG_COLORS
   -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
-  -D ESPCONNECT_DEBUG
+  ; ------------------------------
+  ; Logging ON by default
+  ; -D ESPCONNECT_NO_LOGGING
+  ; ------------------------------
   -D NVS_LOG
   ; -H -M
   ; -D HTTPCLIENT_NOSECURE
