--- a/platformio.ini
+++ b/platformio.ini
@@ -16,18 +16,11 @@ build_flags =
   -Wall -Wextra
   -D CONFIG_ARDUHAL_LOG_COLORS
   -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
-  ; ------------------------------
-  ; Logging ON by default
-  ; -D ESPCONNECT_NO_LOGGING
-  ; ------------------------------
-  -D NVS_LOG
-  ; -H -M
-  ; -D HTTPCLIENT_NOSECURE
-  ; -D ESPCONNECT_NO_MDNS
-  ; -D DEBUG_ESP_CORE
+  ; -D ESPCONNECT_DEBUG
   ; -D ESPCONNECT_NO_MDNS
   ; -D ESPCONNECT_NO_CAPTIVE_PORTAL
   ; -D ESPCONNECT_NO_STD_STRING
+  ; -D ESPCONNECT_NO_LOGGING
 lib_compat_mode = strict
 lib_ldf_mode = chain
 lib_deps = 
