--- a/platformio.ini
+++ b/platformio.ini
@@ -3,11 +3,11 @@
 default_envs = arduino-3, arduino-3-latest, esp8266, esp32-poe-arduino-3, esp32-poe-arduino-3-latest, wt32-eth01-arduino-3, wt32-eth01-arduino-3-latest, lilygo-eth-lite-s3-arduino-3, lilygo-eth-lite-s3-arduino-3-latest
 lib_dir = .
 ; src_dir = examples/BlockingCaptivePortal
-; src_dir = examples/NonBlockingCaptivePortal
+src_dir = examples/NonBlockingCaptivePortal
 ; src_dir = examples/AdvancedCaptivePortal
 ; src_dir = examples/TestWiFi8266
 ; src_dir = examples/WiFiStaticIP
-src_dir = examples/LoadSaveConfig
+; src_dir = examples/LoadSaveConfig
 ; src_dir = examples/NoCaptivePortal
 
 [env]
@@ -21,6 +21,8 @@ build_flags =
   ; -D ESPCONNECT_NO_CAPTIVE_PORTAL
   ; -D ESPCONNECT_NO_STD_STRING
   ; -D ESPCONNECT_NO_LOGGING
+  ; -D ESPCONNECT_ETH_SUPPORT
+  ; -D ESPCONNECT_NO_MUTEX
 lib_compat_mode = strict
 lib_ldf_mode = chain
 lib_deps = 
