--- a/platformio.ini
+++ b/platformio.ini
@@ -51,7 +51,7 @@ lib_deps =
 ;  DEV
 
 [env:arduino-3]
-platform = https://github.com/pioarduino/platform-espressif32/releases/download/54.03.21/platform-espressif32.zip
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/55.03.30-1/platform-espressif32.zip
 ; board = esp32-s3-devkitc-1
 ; board = esp32-c6-devkitc-1
 
@@ -73,7 +73,7 @@ lib_deps =
 ; ETH: esp32-poe
 
 [env:esp32-poe-arduino-3]
-platform = https://github.com/pioarduino/platform-espressif32/releases/download/54.03.21/platform-espressif32.zip
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/55.03.30-1/platform-espressif32.zip
 board = esp32-poe
 build_flags = ${env.build_flags}
   -D ESPCONNECT_ETH_SUPPORT
@@ -86,7 +86,7 @@ build_flags = ${env.build_flags}
 
 ; ETH: wt32-eth01
 [env:wt32-eth01-arduino-3]
-platform = https://github.com/pioarduino/platform-espressif32/releases/download/54.03.21/platform-espressif32.zip
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/55.03.30-1/platform-espressif32.zip
 board = wt32-eth01
 build_flags = ${env.build_flags}
   -D ESPCONNECT_ETH_SUPPORT
@@ -105,7 +105,7 @@ build_flags = ${env.build_flags}
 
 [env:lilygo-eth-lite-s3-arduino-3]
 upload_speed = 115200
-platform = https://github.com/pioarduino/platform-espressif32/releases/download/54.03.21/platform-espressif32.zip
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/55.03.30-1/platform-espressif32.zip
 board = esp32s3box
 build_flags = ${env.build_flags}
   -D ESPCONNECT_ETH_SUPPORT
