--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 
 [platformio]
-default_envs = arduino-3, arduino-3-latest, esp8266, esp32-poe-arduino-3, esp32-poe-arduino-3-latest, wt32-eth01-arduino-3, wt32-eth01-arduino-3-latest, lilygo-eth-lite-s3-arduino-3, lilygo-eth-lite-s3-arduino-3-latest
+default_envs = arduino-3, arduino-rc, esp8266, esp32-poe-arduino-3, esp32-poe-arduino-rc, wt32-eth01-arduino-3, wt32-eth01-arduino-rc, lilygo-eth-lite-s3-arduino-3, lilygo-eth-lite-s3-arduino-rc
 lib_dir = .
 ; src_dir = examples/BlockingCaptivePortal
 src_dir = examples/NonBlockingCaptivePortal
@@ -55,7 +55,7 @@ platform = https://github.com/pioarduino/platform-espressif32/releases/download/
 ; board = esp32-s3-devkitc-1
 ; board = esp32-c6-devkitc-1
 
-[env:arduino-3-latest]
+[env:arduino-rc]
 platform = https://github.com/pioarduino/platform-espressif32/releases/download/54.03.20-rc2/platform-espressif32.zip
 ; board = esp32-s3-devkitc-1
 ; board = esp32-c6-devkitc-1
@@ -78,7 +78,7 @@ board = esp32-poe
 build_flags = ${env.build_flags}
   -D ESPCONNECT_ETH_SUPPORT
 
-[env:esp32-poe-arduino-3-latest]
+[env:esp32-poe-arduino-rc]
 platform = https://github.com/pioarduino/platform-espressif32/releases/download/54.03.20-rc2/platform-espressif32.zip
 board = esp32-poe
 build_flags = ${env.build_flags}
@@ -93,7 +93,7 @@ build_flags = ${env.build_flags}
   -D ETH_PHY_ADDR=1
   -D ETH_PHY_POWER=16
 
-[env:wt32-eth01-arduino-3-latest]
+[env:wt32-eth01-arduino-rc]
 platform = https://github.com/pioarduino/platform-espressif32/releases/download/54.03.20-rc2/platform-espressif32.zip
 board = wt32-eth01
 build_flags = ${env.build_flags}
@@ -120,7 +120,7 @@ build_flags = ${env.build_flags}
   -D ETH_PHY_TYPE=ETH_PHY_W5500
   -UARDUINO_USB_CDC_ON_BOOT
 
-[env:lilygo-eth-lite-s3-arduino-3-latest]
+[env:lilygo-eth-lite-s3-arduino-rc]
 platform = https://github.com/pioarduino/platform-espressif32/releases/download/54.03.20-rc2/platform-espressif32.zip
 upload_speed = 115200
 board = esp32s3box
