--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -157,7 +157,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # platform: [arduino-3, arduino-rc]
+        # platform: [arduino-3]
         platform: [arduino-3]
         board: [esp32-poe, wt32-eth01, lilygo-eth-lite-s3]
 
