Add mapping for Waveshare ESP32-S3 ETH Board (to be tested)

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 
 [platformio]
-default_envs = arduino-3, arduino-rc, esp8266, esp32-poe-arduino-3, esp32-poe-arduino-rc, wt32-eth01-arduino-3, wt32-eth01-arduino-rc, lilygo-eth-lite-s3-arduino-3, lilygo-eth-lite-s3-arduino-rc
+default_envs = arduino-3, esp8266, esp32-poe-arduino-3, wt32-eth01-arduino-3, lilygo-eth-lite-s3-arduino-3
 lib_dir = .
 ; src_dir = examples/BlockingCaptivePortal
 src_dir = examples/NonBlockingCaptivePortal
@@ -54,11 +54,6 @@ platform = https://github.com/pioarduino/platform-espressif32/releases/download/
 ; board = esp32-s3-devkitc-1
 ; board = esp32-c6-devkitc-1
 
-[env:arduino-rc]
-platform = https://github.com/pioarduino/platform-espressif32/releases/download/54.03.20-rc2/platform-espressif32.zip
-; board = esp32-s3-devkitc-1
-; board = esp32-c6-devkitc-1
-
 [env:esp8266]
 platform = espressif8266
 board = huzzah
@@ -77,23 +72,9 @@ board = esp32-poe
 build_flags = ${env.build_flags}
   -D ESPCONNECT_ETH_SUPPORT
 
-[env:esp32-poe-arduino-rc]
-platform = https://github.com/pioarduino/platform-espressif32/releases/download/54.03.20-rc2/platform-espressif32.zip
-board = esp32-poe
-build_flags = ${env.build_flags}
-  -D ESPCONNECT_ETH_SUPPORT
-
 ; ETH: wt32-eth01
 [env:wt32-eth01-arduino-3]
 platform = https://github.com/pioarduino/platform-espressif32/releases/download/55.03.32/platform-espressif32.zip
-board = wt32-eth01
-build_flags = ${env.build_flags}
-  -D ESPCONNECT_ETH_SUPPORT
-  -D ETH_PHY_ADDR=1
-  -D ETH_PHY_POWER=16
-
-[env:wt32-eth01-arduino-rc]
-platform = https://github.com/pioarduino/platform-espressif32/releases/download/54.03.20-rc2/platform-espressif32.zip
 board = wt32-eth01
 build_flags = ${env.build_flags}
   -D ESPCONNECT_ETH_SUPPORT
@@ -115,23 +96,33 @@ build_flags = ${env.build_flags}
   -D ETH_PHY_SPI_MISO=11
   -D ETH_PHY_SPI_MOSI=12
   -D ETH_PHY_SPI_SCK=10
-  ; can only be activated with ESP-IDF >= 5
   -D ETH_PHY_TYPE=ETH_PHY_W5500
   -UARDUINO_USB_CDC_ON_BOOT
 
-[env:lilygo-eth-lite-s3-arduino-rc]
-platform = https://github.com/pioarduino/platform-espressif32/releases/download/54.03.20-rc2/platform-espressif32.zip
+; Waveshare ESP32-S3 ETH Board
+; https://www.waveshare.com/wiki/ESP32-S3-ETH
+
+[env:waveshare_esp32s3_eth]
 upload_speed = 115200
-board = esp32s3box
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/55.03.32/platform-espressif32.zip
+board = esp32-s3-devkitc-1
 build_flags = ${env.build_flags}
   -D ESPCONNECT_ETH_SUPPORT
   -D ETH_PHY_ADDR=1
-  -D ETH_PHY_CS=9
-  -D ETH_PHY_IRQ=13
-  -D ETH_PHY_RST=14
-  -D ETH_PHY_SPI_MISO=11
-  -D ETH_PHY_SPI_MOSI=12
-  -D ETH_PHY_SPI_SCK=10
-  ; can only be activated with ESP-IDF >= 5
+  -D ETH_PHY_CS=14
+  -D ETH_PHY_IRQ=10
+  -D ETH_PHY_RST=9
+  -D ETH_PHY_SPI_MISO=12
+  -D ETH_PHY_SPI_MOSI=11
+  -D ETH_PHY_SPI_SCK=13
   -D ETH_PHY_TYPE=ETH_PHY_W5500
-  -UARDUINO_USB_CDC_ON_BOOT
+;  https://community.platformio.org/t/what-board-do-i-select-for-waveshare-esp32-s3-eth-board/52627/2
+; board_build.arduino.memory_type = qio_opi
+; board_build.flash_mode = qio
+; board_build.psram_type = opi
+; board_upload.flash_size = 16MB
+; board_upload.maximum_size = 16777216
+; board_build.partitions = default_16MB.csv
+; board_build.extra_flags = 
+;   -D BOARD_HAS_PSRAM
+;   -D ARDUINO_USB_CDC_ON_BOOT=1
