--- a/platformio.ini
+++ b/platformio.ini
@@ -25,7 +25,7 @@ lib_compat_mode = strict
 lib_ldf_mode = chain
 lib_deps = 
   bblanchon/ArduinoJson @ 7.4.2
-  ESP32Async/AsyncTCP @ ^3.4.9
+  ESP32Async/AsyncTCP @ 3.4.10
   ESP32Async/ESPAsyncWebServer @ 3.9.3
 upload_protocol = esptool
 monitor_speed = 115200
